src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Est_Sales_CY_2__c</fullName>
        <description>Field added to add Est Sales CY on the Opp instead of inheriting from Account.</description>
        <label>Est Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Sales_CY__c</fullName>
        <description>Shows the Est Sales CY added manually on the Opp by the sales rep. Formerly showed data originating form the Account - formula saved below:  IF ( OR($RecordType.Name =&apos;GROW Restorative&apos;, $RecordType.Name =&apos;GROW Surgical&apos;), Amount ,0)</description>
        <formula>Est_Sales_CY_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Sales_Growth__c</fullName>
        <formula>(Account_Est_Sales_CY__c-Sales_Dental_LY__c)/Sales_Dental_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wachstum des Umsatzes in %</inlineHelpText>
        <label>%Est Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Est_Sales_LY__c</fullName>
        <inlineHelpText>This field contains the Est Sales-number as set beginning of Dec Last Year. Its updated by the SFDC administrators as a preparation for the new year.</inlineHelpText>
        <label>Est Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Sales_Other_D__c</fullName>
        <description>updated through PushAmountToOpportunities trigger, then Est Other Sales CY (D) shows its value.</description>
        <label>Est Sales Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_of_ATL_Abuts_Current_CY__c</fullName>
        <description>FOR LAB ACCOUNTS: The estimated # of Atlantis Abutments you anticipate this lab to PURCHASE current year.
            FOR CLINICAL ACCOUNTS: The estimated # of Atlantis Abutments you anticipate the clinic to CONSUME current year.</description>
        <inlineHelpText>FOR LAB ACCOUNTS: The estimated # of Atlantis Abutments you anticipate this lab to PURCHASE current year.
            FOR CLINICAL ACCOUNTS: The estimated # of Atlantis Abutments you anticipate the clinic to CONSUME current year.</inlineHelpText>
        <label>Est # of ATL Abut&apos;s CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_of_ATL_ISUS_CY__c</fullName>
        <label>Est # of ATL ISUS CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_of_Implants_Current_CY__c</fullName>
        <description>Input the estimated # of Implants this Customer will purchase within current CY.</description>
        <inlineHelpText>Input the estimated # of Implants this Customer will purchase within current CY.</inlineHelpText>
        <label>Est # of Implants CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_of_Implants_LY__c</fullName>
        <inlineHelpText>This field contains the Est # of Implants as set in the beginning of Dec last year. It&apos;s updated by the SFDC Administrators as a preparation for the new year.</inlineHelpText>
        <label>Est # of Implants LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_of_Stock_Abuts_Current_CY__c</fullName>
        <description>FOR LAB ACCOUNTS: The estimated # of Stock Abutments you anticipate this lab to PURCHASE current year.
            FOR CLINICAL ACCOUNTS: The estimated # of ATIS Stock Abutments you anticipate the clinic to CONSUME &amp;/or PURCHASE current year.</description>
        <inlineHelpText>FOR LAB ACCOUNTS: The estimated # of Stock Abutments you anticipate this lab to PURCHASE current year.
            FOR CLINICAL ACCOUNTS: The estimated # of ATIS Stock Abutments you anticipate the clinic to CONSUME &amp;/or PURCHASE current year.</inlineHelpText>
        <label>Est # of Stock Abut&apos;s CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expectations__c</fullName>
        <description>Used to track any specific expectations for the product/service</description>
        <inlineHelpText>What are the expectations for the product/service asked for?</inlineHelpText>
        <label>Expectations</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Atlantis_Sales_Date__c</fullName>
        <formula>Account.First_Atlantis_Sales_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Atlantis Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_date__c</fullName>
        <inlineHelpText>Enter the date when you assume orders corresponding to the amount for this Opportunity will have been placed.</inlineHelpText>
        <label>Fulfillment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_of_target_ATL_Abut__c</fullName>
        <formula>IF(
OR(
AND( of_ATL_Abuts_YTD__c = 0, Est_of_ATL_Abuts_Current_CY__c = 0),
AND( of_ATL_Abuts_YTD__c = 0, Est_of_ATL_Abuts_Current_CY__c &gt; 0)),0,
IF(
AND( of_ATL_Abuts_YTD__c &gt; 0, Est_of_ATL_Abuts_Current_CY__c = 0),1,
IF(
AND( of_ATL_Abuts_YTD__c &lt; 0, Est_of_ATL_Abuts_Current_CY__c &gt;= 0),-1,
of_ATL_Abuts_YTD__c/ Est_of_ATL_Abuts_Current_CY__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment of target ATL Abut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fulfillment_of_target_CFE__c</fullName>
        <description>Fulliment oft CFE Target = CFEs Current Year / CFE Target Current Year</description>
        <formula>IF(
OR(
AND( CFEs_CY__c = 0, CFE_Target_CY__c = 0),
AND( CFEs_CY__c = 0, CFE_Target_CY__c &gt; 0)),0,
IF(
AND( CFEs_CY__c &gt; 0, CFE_Target_CY__c = 0),1,
IF(
AND( CFEs_CY__c &lt; 0, CFE_Target_CY__c &gt;= 0),-1,
CFEs_CY__c/CFE_Target_CY__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Erreichung Anzahl geplanten Besuche für dieses Jahr</inlineHelpText>
        <label>Fulfillment of target CFE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fulfillment_of_target_ISUS__c</fullName>
        <formula>IF(
OR(
AND( Sold_ATL_ISUS_CY__c = 0, Est_of_ATL_ISUS_CY__c = 0),
AND( Sold_ATL_ISUS_CY__c = 0, Est_of_ATL_ISUS_CY__c &gt; 0)),0,
IF(
AND( Sold_ATL_ISUS_CY__c &gt; 0, Est_of_ATL_ISUS_CY__c = 0),1,
IF(
AND( Sold_ATL_ISUS_CY__c &lt; 0, Est_of_ATL_ISUS_CY__c &gt;= 0),-1,
Sold_ATL_ISUS_CY__c/ Est_of_ATL_ISUS_CY__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment of target ISUS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fulfillment_of_target_Implants__c</fullName>
        <description>fullfillment of sold Implants = Actual sold implants CY/Est # of Implants CY</description>
        <formula>IF(
OR(
AND( of_Implants_Sold_YTD__c = 0, Est_Implant_Volume_CY_D_JP__c = 0),
AND( of_Implants_Sold_YTD__c = 0, Est_Implant_Volume_CY_D_JP__c &gt; 0)),0,
IF(
AND( of_Implants_Sold_YTD__c &gt; 0, Est_Implant_Volume_CY_D_JP__c = 0),1,
IF(
AND( of_Implants_Sold_YTD__c &lt; 0, Est_Implant_Volume_CY_D_JP__c &gt;= 0),-1,
of_Implants_Sold_YTD__c/Est_Implant_Volume_CY_D_JP__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aktueller Erfüllungsgrad zu den geplanten Implantaten dieses Jahr</inlineHelpText>
        <label>Fulfillment of target Implants</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fulfillment_of_target_Sales__c</fullName>
        <description>Fulliment of the estemated sales. Based on sales CY to estemated sales</description>
        <formula>IF(
OR(
AND( Sales_Dental_YTD__c = 0, Account_Est_Sales_CY__c = 0),
AND( Sales_Dental_YTD__c = 0, Account_Est_Sales_CY__c &gt; 0)),0,
IF(
AND( Sales_Dental_YTD__c &gt; 0, Account_Est_Sales_CY__c = 0),1,
IF(
AND( Sales_Dental_YTD__c &lt; 0, Account_Est_Sales_CY__c &gt;= 0),-1,
Sales_Dental_YTD__c/Account_Est_Sales_CY__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aktueller Stand zum geplanten Umsatz</inlineHelpText>
        <label>Fulfillment of target Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fulfillment_of_target_Stock_Abut__c</fullName>
        <formula>IF(
OR(
AND( of_Stock_Abuts_YTD__c = 0, Est_of_Stock_Abuts_Current_CY__c = 0),
AND( of_Stock_Abuts_YTD__c = 0, Est_of_Stock_Abuts_Current_CY__c &gt; 0)),0,
IF(
AND( of_Stock_Abuts_YTD__c &gt; 0, Est_of_Stock_Abuts_Current_CY__c = 0),1,
IF(
AND( of_Stock_Abuts_YTD__c &lt; 0, Est_of_Stock_Abuts_Current_CY__c &gt;= 0),-1,
of_Stock_Abuts_YTD__c / Est_of_Stock_Abuts_Current_CY__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment of target Stock Abut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GET_AP_Red_Light_Focus_Approval__c</fullName>
        <inlineHelpText>Field set by Sales Manager to denote that approval is given to the Sales Rep to continue to focus on this GET AP even though stage duration is &gt;90 days. If &quot;No&quot; is selected, the GET AP will automatically be closed with status &quot;Lost&quot;.</inlineHelpText>
        <label>Red Progress Status Focus Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GET_Opportunity_Subtype__c</fullName>
        <label>GET Opportunity Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GET_Opportunity_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle Recipient</fullName>
                </value>
                <value>
                    <fullName>CE Attendee</fullName>
                </value>
                <value>
                    <fullName>CEREC Owner</fullName>
                </value>
                <value>
                    <fullName>Competitive Placer</fullName>
                </value>
                <value>
                    <fullName>Digital Workflow</fullName>
                </value>
                <value>
                    <fullName>Edentulous</fullName>
                </value>
                <value>
                    <fullName>New Starter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Regen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GET_Opportunity_type__c</fullName>
        <description>For IMPL NA
            Competitive Specialist: OMS, Perio, or Prosth that already places implants, likely in a ‘referral-based’ practice. Almost certainly 50+ annually.
            Cerec Owner GP: GP that we have targeted for implant unit sales, because they own Sirona equipment and we assume / know that they place implants
            Competitive Placer GP: GP that we know places implants due to local knowledge</description>
        <inlineHelpText>Competitive Specialist: OMS/Perio/Prosth places implants, likely +50 Implants Potential/Year
            Cerec Owner GP: Owner of Sirona equipment, targeted for implant unit sales
            Competitor Placer GP: Placer of implants</inlineHelpText>
        <label>GET Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cerec Owner GP</fullName>
                </value>
                <value>
                    <fullName>Competitive Placer GP</fullName>
                </value>
                <value>
                    <fullName>Competitive Specialist</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Growing_Practice_Market_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this check box if you are planning on growing this Account by increasing the Dentsply Implants market share.</description>
        <inlineHelpText>Check this check box if you are planning on growing this Account by increasing the Dentsply Implants market share.</inlineHelpText>
        <label>Growing Practice Market Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Growing_Practice_with_Refferal_events_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this check box if you are planning on growing this Account by Refferal events/IP (CH/DE)</description>
        <inlineHelpText>Check this check box if you are planning on growing this Account by Refferal events/IP</inlineHelpText>
        <label>Growing Practice with Refferal events/IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Growing_Practice_with_STEPPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this check box if you are planning on growing this Account by STEPPS (CH/DE)</description>
        <inlineHelpText>Check this check box if you are planning on growing this Account by STEPPS (CH/DE)</inlineHelpText>
        <label>Growing Practice with STEPPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQTriggerField__c</fullName>
        <description>Used by HQ to trigger enforced Naming Convention</description>
        <inlineHelpText>Used by HQ to trigger enforced Naming Convention</inlineHelpText>
        <label>HQTriggerField</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Level_Plan__c</fullName>
        <description>Please input here the high level activity you are planning to conduct in order to close the Opportunity.</description>
        <inlineHelpText>Please input here the high level activity you are planning to conduct in order to close the Opportunity.</inlineHelpText>
        <label>High Level Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMG_Est_Sales_CY__c</fullName>
        <description>COS field used for North America Dental.</description>
        <formula>( Account_Est_Sales_CY__c  / MAX(Account_Est_Sales_CY__c  ,  Sales_Dental_YTD__c  ,  Sales_Dental_LY__c  ))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMG Est Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMG_Sales_Graph__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=bhs&amp;chd=t:&quot; &amp;
            Text(IMG_Est_Sales_CY__c ) &amp; &quot;,&quot; &amp;
            Text( IMG_Sales_YTD__c ) &amp; &quot;,&quot; &amp;
            Text( IMG_Sales_LY__c ) &amp;
            &quot;&amp;chbh=10&amp;chs=250x60&amp;chf=bg,s,F3F3EC&amp;chdl=Est Sales CY|Sales YTD|Sales LY&amp;chco=4D89D9 &quot;,
            &quot;chart text&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMG Sales Graph</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMG_Sales_LY__c</fullName>
        <description>COS field used for North America Dental.</description>
        <formula>( Sales_Dental_LY__c / MAX( Account_Est_Sales_CY__c ,  Sales_Dental_YTD__c , Sales_Dental_LY__c ))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMG Sales LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMG_Sales_YTD__c</fullName>
        <description>COS field used for North America Dental.</description>
        <formula>(Sales_Dental_YTD__c   / MAX( Account_Est_Sales_CY__c ,  Sales_Dental_YTD__c  ,  Sales_Dental_LY__c ))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMG Sales YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMPL_Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =60,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Main_Competitor__c,&quot;&quot;), &quot;Main competitor, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMPL Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMPL_Data_Quality_Score__c</fullName>
        <formula>IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( ISPICKVAL( Main_Competitor__c ,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMPL Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implants_Won_Date__c</fullName>
        <formula>Account.LastWonEventYearMonth_Implants__c</formula>
        <label>Implants Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implants_Won_Lost_Status__c</fullName>
        <formula>Account.WonLostStatus_Implants_EndField__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implants Won/Lost Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implants__c</fullName>
        <formula>if (or(includes( Account.Clinic_Treatment_Focus__c ,&quot;Implantology&quot;), includes( Account.Clinic_Treatment_Focus__c ,&quot;Implant Surgery&quot;),includes( Account.Clinic_Treatment_Focus__c ,&quot;Implant Restorations&quot;)),True,False)</formula>
        <label>Implants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Improved_based_on_Managers_feedback__c</fullName>
        <inlineHelpText>Set by SR when feedback provided by Sales Manager is corrected. By setting this field Sales Manager is notified to check AP again and approve it.
If Sales Manager still does not approve the AP, he is to uncheck this field to again send back to SR.</inlineHelpText>
        <label>Improved based on Managers feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field for NA to track if Equipment is included for Cerec GET AP</description>
        <label>Include Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Type__c</fullName>
        <formula>TEXT(Account.Key_Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Acct__c</fullName>
        <formula>IF(Account.Key_Account__c=True, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the Account (blue Account Page) a Key Account?</inlineHelpText>
        <label>Key Acct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_GET_Opportunity_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates this opportunity as one of the required 5 Key GET Opportunities</description>
        <inlineHelpText>Designates this opportunity as one of the required 5 Key GET Opportunities</inlineHelpText>
        <label>Key GET Opportunity - NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LY_Accomplishment_To_Date__c</fullName>
        <inlineHelpText>Field contains the Account Plan Accomplishment To Date from last year. Automatically set be Salesforce at the end of each year.</inlineHelpText>
        <label>LY Accomplishment To Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LY_High_Level_Plan__c</fullName>
        <inlineHelpText>Field contains the Account Plan High Level Plan from last year. Automatically set be Salesforce at the end of each year.</inlineHelpText>
        <label>LY High Level Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LY_Obstacles_To_Overcome__c</fullName>
        <inlineHelpText>Field contains the Account Plan Obstacles To Overcome from last year. Automatically set be Salesforce at the end of each year.</inlineHelpText>
        <label>LY Obstacles To Overcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LY_Summary__c</fullName>
        <inlineHelpText>Field contains the Account Plan Summary from last year. Automatically set be Salesforce at the end of each year.</inlineHelpText>
        <label>LY Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change_Date__c</fullName>
        <description>Date when the Opportunity stage was last changed. Used to calculate Stage Duration used for the Opportunity Flag-handling.</description>
        <inlineHelpText>Date when the Opportunity stage was last changed.</inlineHelpText>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeftCardLiterature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left Card/Literature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Cancellation_Description__c</fullName>
        <label>Loss/Cancellation Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Cancellation_Reason__c</fullName>
        <label>Loss/Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account no longer eligible for GROW Account Plan</fullName>
                </value>
                <value>
                    <fullName>Administration Error</fullName>
                </value>
                <value>
                    <fullName>Closed due to opportunity inactivity</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Opportunity_Reason__c</fullName>
        <label>Lost Opportunity Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor Related</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Price Related</fullName>
                </value>
                <value>
                    <fullName>Product Feature Related</fullName>
                </value>
                <value>
                    <fullName>Service Related</fullName>
                </value>
                <value>
                    <fullName>Time Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Competitor_D__c</fullName>
        <description>Main Competitor is taken from the Account Record. If this field is empty, please update the Main Competitor field on the Account.</description>
        <formula>Account.Main_Competitor_D__r.Name</formula>
        <inlineHelpText>Main Competitor is taken from the Account Record. If this field is empty, please update the Main Competitor field on the Account.</inlineHelpText>
        <label>Main Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Competitor__c</fullName>
        <label>Main Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3i Implant Innovations</fullName>
                </value>
                <value>
                    <fullName>3M Lava</fullName>
                </value>
                <value>
                    <fullName>Bard</fullName>
                </value>
                <value>
                    <fullName>BBRaun</fullName>
                </value>
                <value>
                    <fullName>Biomet 3i</fullName>
                </value>
                <value>
                    <fullName>Camlog</fullName>
                </value>
                <value>
                    <fullName>Coloplast</fullName>
                </value>
                <value>
                    <fullName>Custom Cast/UCLA</fullName>
                </value>
                <value>
                    <fullName>Dentsply/Friadent</fullName>
                </value>
                <value>
                    <fullName>Didecco</fullName>
                </value>
                <value>
                    <fullName>Etkon</fullName>
                </value>
                <value>
                    <fullName>Fresenius Kabi</fullName>
                </value>
                <value>
                    <fullName>Haemonetics</fullName>
                </value>
                <value>
                    <fullName>Hollister</fullName>
                </value>
                <value>
                    <fullName>Johnson&amp;Johnson</fullName>
                </value>
                <value>
                    <fullName>Manfred Sauer</fullName>
                </value>
                <value>
                    <fullName>Medtronic</fullName>
                </value>
                <value>
                    <fullName>Modified Stock</fullName>
                </value>
                <value>
                    <fullName>Nobel</fullName>
                </value>
                <value>
                    <fullName>Nobel Biocare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procera</fullName>
                </value>
                <value>
                    <fullName>Sorin</fullName>
                </value>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Teleflex-Rusch Care</fullName>
                </value>
                <value>
                    <fullName>Unomedical</fullName>
                </value>
                <value>
                    <fullName>Zimmer</fullName>
                </value>
                <value>
                    <fullName>Zimmer Dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManualName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Name Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Commission__c</fullName>
        <description>Some countries asked the possibility to enter manual commission for X-sbu opportunities being the automatic field can not be used for calculating commissions on the product brand level</description>
        <label>Manual Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_CFEs__c</fullName>
        <label>Minimum CFEs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NA_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>NA_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3D Upgrade</fullName>
                </value>
                <value>
                    <fullName>ACB with ASA</fullName>
                </value>
                <value>
                    <fullName>AH Plus</fullName>
                </value>
                <value>
                    <fullName>AH Plus Bioceramic Sealer</fullName>
                </value>
                <value>
                    <fullName>AH Temp</fullName>
                </value>
                <value>
                    <fullName>AlginX</fullName>
                </value>
                <value>
                    <fullName>All Ceramics</fullName>
                </value>
                <value>
                    <fullName>All Other Endo</fullName>
                </value>
                <value>
                    <fullName>All Other - Niti Rotary Files</fullName>
                </value>
                <value>
                    <fullName>All Other – Obturation</fullName>
                </value>
                <value>
                    <fullName>Anaestadent</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>ANKYLOS</fullName>
                </value>
                <value>
                    <fullName>Apex Locator</fullName>
                </value>
                <value>
                    <fullName>Aquasil</fullName>
                </value>
                <value>
                    <fullName>Aquasil Ultra Plus</fullName>
                </value>
                <value>
                    <fullName>ATIS</fullName>
                </value>
                <value>
                    <fullName>ATIS EV</fullName>
                </value>
                <value>
                    <fullName>ATIS TX</fullName>
                </value>
                <value>
                    <fullName>Atlantis</fullName>
                </value>
                <value>
                    <fullName>Atlantis Abutments</fullName>
                </value>
                <value>
                    <fullName>Atlantis Suprastructures</fullName>
                </value>
                <value>
                    <fullName>Automate</fullName>
                </value>
                <value>
                    <fullName>Axano</fullName>
                </value>
                <value>
                    <fullName>Axeos</fullName>
                </value>
                <value>
                    <fullName>Azento Astra Tech</fullName>
                </value>
                <value>
                    <fullName>Azento EV</fullName>
                </value>
                <value>
                    <fullName>Azento XiVE</fullName>
                </value>
                <value>
                    <fullName>Bioceramic</fullName>
                </value>
                <value>
                    <fullName>Bluecam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>